Fix navbar z-index bug

--- a/src/app/profile/header/header.component.scss
+++ b/src/app/profile/header/header.component.scss
@@ -45,6 +45,7 @@
         position: fixed;
         top: 0;
         right: -100%;
+        z-index: 99;
         width: 100%;
         height: 100%;
         transition: 300ms;
